starting on the "about us" page

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,9 +5,212 @@
     <title></title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/fontello.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script defer src="css/fonts/fontawesome-all.js">
+
+    </script>
+
+
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg-dark">
+      <div class="row">
+        <div class="col-md-3 bg-light text-center logo-top">
+          <img src="img/logo.png" alt="">
+        </div>
+
+        <div class="col-md-9">
+          <div class="row">
+            <div class="text-secondary col-md email-top">
+              <i class="demo-icon icon-mail"></i>
+              <link>info@hellohelp.com</link>
+            </div>
+
+            <div class="text-secondary col-md phone-top">
+              <i class="demo-icon icon-phone"></i>
+              <link>+440 875369208</link>
+            </div>
+
+            <div class="col-md">
+              <div class="btn-group dropright login-button">
+                <button type="button" class="btn btn-outline-secondary dropdown-toggle rounded-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    LOG IN
+                  </button>
+                <div class="dropdown-menu">
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md">
+              <div class="dropdown">
+                <button class="language-button btn btn-outline-secondary dropdown-toggle rounded-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      EN
+                    </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">English</a>
+                  <a class="dropdown-item" href="#">Spanish</a>
+                  <a class="dropdown-item" href="#">French</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md border border-secondary text-center social-networking">
+              <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+              <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+              <a class="text-muted social-link" href="https://www.instagram.com/" target="_blank"><i class="demo-icon icon-instagram"></i></a>
+              <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+            </div>
+
+          </div>
+
+          <div class="row">
+            <div class="col-md-12">
+
+              <nav class="navbar navbar-expand-md">
+                <button class="navbar-toggler" type="button" data-toggle="collapse">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+
+                <div class="collapse navbar-collapse">
+                  <ul class="navbar-nav row">
+                    <li class="col-md-1 nav-item active">
+                      <a class="nav-link text-secondary top-directory" href="file:///C:/Projects/prototype-two/index.html">Home<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="col-md-3 nav-item">
+                      <a class="nav-link text-secondary top-directory" href="aboutus.html">About Us</a>
+                    </li>
+                    <li class="col-md-3 nav-item dropdown">
+                      <a class="nav-link dropdown-toggle text-secondary" href="services.html" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Services
+                        </a>
+                      <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Complimentary Breakfast</a>
+                        <a class="dropdown-item" href="#">Free WiFi</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li>
+                    <li class="col-md-3 nav-item dropdown">
+                      <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Products
+                        </a>
+                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                      </div>
+                    </li>
+                    <li class="col-md-1 nav-item">
+                      <a class="nav-link text-secondary" href="#">Gallery</a>
+                    </li>
+                    <li class="col-md-1 nav-item">
+                      <a class="nav-link text-secondary" href="#">Contact</a>
+                    </li>
+                  </ul>
+                </div>
+                <i class="text-secondary demo-icon icon-search"></i>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr class="header-hr">
+
+      <div class="row aboutus-breadcrumb">
+        <div class="col-md-2">
+          <h2 class="gold-aboutus">About Us</h2>
+        </div>
+
+          <nav class="col-md-10" aria-label="breadcrumb">
+            <ol class="breadcrumb bg-dark">
+              <li class="breadcrumb-item"><a href="#">Home</a></li>
+              <li class="breadcrumb-item"><a href="#">Library</a></li>
+              <li class="breadcrumb-item"><a href="#">Data</a></li>
+            </ol>
+          </nav>
+      </div>
+
+      <article class="aboutus-main">
+        <h1 class="gold-aboutus">About Us</h1>
+        <p class="bold-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, est quis congue iaculis, ipsum<br>leo venenatis nibh, et laoreet sem dui vitae magna. Integer tortor urna, pharetra ut felis sed, viverra fringilla eros<br>in diam pharetra dignissim. Ut sed ultrices erat. Donec vitae tempor tortor.</p>
+        <p>In sodales, urna lacinia ullamcorper scelerisque, metus sapien vehicula tellus, a scelerisque est tortor ut nibh. Cras sed tristique risus. Donec molestie arcu pretium scelerisque volutpat. Mauris id dui venenatis, placerat nisi id, cursus nunc. Proin est sapien, suscipit at erat eu, consequat eleifend ante. Mauris vitae justo suscipit, volutpat tortor eu, iaculis enim. Morbi maximus euismod tellus id consectetur. Phasellus quis auctor mi. Donec pulvinar aliquet vehicula. Sed in purus et nisi tempus sodales at sed nisi. Sed imperdiet volutpat dictum. </p>
+      </article>
+
+      <div class="bg-light">
+        <div class="card-deck first-page-cards bg-light">
+          <div class="card border-0">
+            <div class="card-body">
+              <img src="img/suitcase.png" alt="">
+              <h4 class="card-title">Amazing Travel</h4>
+              <p class="card-text text-secondary">Lorem ipsum dolor elit. Suspendisse elementum dolor euismod pharetra.</p>
+              <div class="btn-group dropright">
+                <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+                  Read More
+                </button>
+                <div class="dropdown-menu">
+                  <!-- Dropdown menu links -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0">
+            <div class="card-body">
+              <img src="img/discover.png" alt="">
+              <h4 class="card-title gold-text">Discover</h4>
+              <p class="card-text text-secondary">Nam tellus, conva augue. Aliquam lobortis mollis dapibus ullamcorper justo.</p>
+              <div class="btn-group dropright">
+                <button type="button" class="gold-text btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+                  Read More
+                </button>
+                <div class="dropdown-menu">
+                  <!-- Dropdown menu links -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0">
+            <div class="card-body">
+              <img src="img/around-the-world.png" alt="">
+              <h4 class="card-title">Book Your Trip</h4>
+              <p class="card-text text-secondary">Curabitur dui risus, pellentesque a mi. Cras orci ultricies fermentum.</p>
+              <div class="btn-group dropright">
+                <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+                  Read More
+                </button>
+                <div class="dropdown-menu">
+                  <!-- Dropdown menu links -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0">
+            <div class="card-body">
+              <img src="img/speech-bubble.png" alt="">
+              <h4 class="card-title">Nice Support</h4>
+              <p class="card-text text-secondary">Nulla erat urna, vulputate quis in, ac ante. Vpit odio quis tincidunt.</p>
+              <div class="btn-group dropright">
+                <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+                  Read More
+                </button>
+                <div class="dropdown-menu">
+                  <!-- Dropdown menu links -->
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row text-center">
+          <div class="col-md-12">
+            <h1 class="gold-text about-hotel">Team</h1>
+            <p class="text-secondary about-lorem">Mauris porttitor hendrerit massa dapibus rhoncus. Aliquam ac risus at justo faucibus sagittis. Pellentesque<br>habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent tristique placerat varius.</p>
+          </div>
+        </div>
+      </div>
+
 
     </div>
 
