--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <div class="row bg-dark">
+  <div class="container-fluid bg-dark">
+    <div class="row">
       <div class="col-md-3 bg-light text-center logo-top">
         <img src="img/logo.png" alt="">
       </div>
@@ -118,7 +118,7 @@
       </div>
 
     </div>
-
+    <hr class="header-hr">
     </div>
 
 
@@ -177,7 +177,7 @@
       </div>
 
 
-      <div class="col-md-2">
+      <div class="col-md-2 widgets">
         <img src="img/weather.png" alt="">
         <img src="img/gellery.png" alt="">
         <img src="img/virtual-tour.png" alt="">
@@ -268,7 +268,7 @@
         </div>
 
         <div class="col-md-2">
-          <button type="button" class="btn btn-secondary btn-lg" name="button">Search Book</button>
+          <button type="button" class="btn btn-secondary btn-lg search-book" name="button">Search Book</button>
         </div>
       </div>
 
@@ -276,7 +276,7 @@
 
 
 
-
+<!-- Copy & paste below -->
 
 
     <div class="card-deck first-page-cards">
@@ -284,7 +284,7 @@
         <div class="card-body">
           <img src="img/suitcase.png" alt="">
           <h4 class="card-title">Amazing Travel</h4>
-          <p class="card-text text-secondary">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse elementum dolor eget est euismod pharetra.</p>
+          <p class="card-text text-secondary">Lorem ipsum dolor elit. Suspendisse elementum dolor euismod pharetra.</p>
           <div class="btn-group dropright">
             <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
               Read More
@@ -299,7 +299,7 @@
         <div class="card-body">
           <img src="img/discover.png" alt="">
           <h4 class="card-title gold-text">Discover</h4>
-          <p class="card-text text-secondary"> Nam est tellus, aliquam vel convallis consequat, lobortis suscipit augue. Aliquam lobortis mollis dapibus ullamcorper justo ac.</p>
+          <p class="card-text text-secondary">Nam tellus, conva augue. Aliquam lobortis mollis dapibus ullamcorper justo.</p>
           <div class="btn-group dropright">
             <button type="button" class="gold-text btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
               Read More
@@ -314,7 +314,7 @@
         <div class="card-body">
           <img src="img/around-the-world.png" alt="">
           <h4 class="card-title">Book Your Trip</h4>
-          <p class="card-text text-secondary">Curabitur dui risus, pellentesque a mi consectetur, efficitur consequat turpis. Cras orci ultricies fermentum.</p>
+          <p class="card-text text-secondary">Curabitur dui risus, pellentesque a mi. Cras orci ultricies fermentum.</p>
           <div class="btn-group dropright">
             <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
               Read More
@@ -329,7 +329,7 @@
         <div class="card-body">
           <img src="img/speech-bubble.png" alt="">
           <h4 class="card-title">Nice Support</h4>
-          <p class="card-text text-secondary">Nulla erat urna, vulputate quis pretium in, rhoncus ac ante. Vestibulum facilisis suscipit odio quis tincidunt.</p>
+          <p class="card-text text-secondary">Nulla erat urna, vulputate quis in, ac ante. Vpit odio quis tincidunt.</p>
           <div class="btn-group dropright">
             <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
               Read More
@@ -349,13 +349,13 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row home-cards">
       <div class="col-md-4">
         <div class="border-cards">
-          <h4>Restaurant & Banquets</h4>
-          <p class="text-secondary">Nulla vehicul. Donec<br>commo convallis tellus quis fringilla.</p>
+          <h5>Restaurant & Banquets</h5>
+          <p class="text-secondary">Nulla vehicul. Donec com<br>convallis tellus quis fringilla.</p>
           <div class="btn-group dropright">
-            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle home-card-button" data-toggle="dropdown">
               Read More
             </button>
             <div class="dropdown-menu">
@@ -364,10 +364,10 @@
           </div>
         </div>
         <div class="border-cards">
-          <h4>Gym</h4>
+          <h5>Gym</h5>
           <p class="text-secondary">Praesent iaculis metus sem,<br>vitae efficitur elit maximus et.</p>
           <div class="btn-group dropright">
-            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle home-card-button" data-toggle="dropdown">
               Read More
             </button>
             <div class="dropdown-menu">
@@ -378,10 +378,10 @@
       </div>
       <div class="col-md-4">
         <div class="border-cards">
-          <h4>Rooms</h4>
+          <h5>Rooms</h5>
           <p class="text-secondary">Duis ullamcorper dignissim<br>mauris at malesuada. Vivamus tincidunt</p>
           <div class="btn-group dropright">
-            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle home-card-button" data-toggle="dropdown">
               Read More
             </button>
             <div class="dropdown-menu">
@@ -390,10 +390,10 @@
           </div>
         </div>
         <div class="border-cards">
-          <h4>Spa</h4>
+          <h5>Spa</h5>
           <p class="text-secondary"> Lorem ipsum dolor sit<br>amet, consectetur adipiscing elit.</p>
           <div class="btn-group dropright">
-            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle home-card-button" data-toggle="dropdown">
               Read More
             </button>
             <div class="dropdown-menu">
@@ -404,10 +404,10 @@
       </div>
       <div class="col-md-4">
         <div class="border-cards">
-          <h4>Bar</h4>
+          <h5>Bar</h5>
           <p class="text-secondary"> Curabitur eu arcu ut ante interdum<br>consequat. Maecenas id tincidunt sapien.</p>
           <div class="btn-group dropright">
-            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle home-card-button" data-toggle="dropdown">
               Read More
             </button>
             <div class="dropdown-menu">
@@ -416,10 +416,10 @@
           </div>
         </div>
         <div class="border-cards">
-          <h4>Car Parking</h4>
+          <h5>Car Parking</h5>
           <p class="text-secondary">Vestibulum rutrum risus interdum risus<br>tincidunt, sed ultricies tellus pharetra.</p>
           <div class="btn-group dropright">
-            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle" data-toggle="dropdown">
+            <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle home-card-button" data-toggle="dropdown">
               Read More
             </button>
             <div class="dropdown-menu">
@@ -430,8 +430,8 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-7 border">
+    <article class="row">
+      <div class="col-md-7 news-section">
         <h3 class="text-primary">News</h3>
         <a href="https://www.google.com/search?q=online+pacman+game&oq=online+pacman+game&aqs=chrome..69i57j0l5.4160j1j7&sourceid=chrome&ie=UTF-8#clb=clb">
           <img class="float-right" src="img/half-pacman.png" alt="">
@@ -471,12 +471,13 @@
             </button>
           </div>
         </div>
-        <button type="button" class="btn btn-light w-100">View All</button>
+        <button type="button" class="btn btn-light w-75 view-all-btn">View All</button>
       </div>
 
       <div class="col-md-5">
 
-        <div class="border">
+        <div class="announcements">
+
           <h3 class="text-success">Announcements</h3>
           <a href="https://www.google.com/search?q=online+pacman+game&oq=online+pacman+game&aqs=chrome..69i57j0l5.4160j1j7&sourceid=chrome&ie=UTF-8#clb=clb">
             <img class="float-right" src="img/half-pacman.png" alt="">
@@ -492,10 +493,11 @@
           <button type="button" class="text-secondary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
             Read More
           </button>
+
         </div>
 
-        <div class="row">
-          <div class="col-md-12 border">
+        <div class="row products">
+          <div class="col-md-12">
             <h3 class="text-primary">Products</h3>
             <p class="text-secondary w-50">Nunc iaculis ornare nisi, eget volutpat tempor quis. Quisque blandit ipsum mi at erat vulputate posuere.</p>
             <button type="button" class="text-primary btn btn-outline-light dropdown-toggle border-bottom" data-toggle="dropdown">
@@ -505,19 +507,19 @@
         </div>
       </div>
 
-    </div>
+    </article>
 
     <footer class="row bg-dark">
       <div class="col-md-3">
-        <h3 class="grey-text">NortSea About</h3>
-        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mi eros, egestas vel tempus vel, mollis ut odio. Praesent et posuere ex. Suspendisse bibendum orci nec imperdiet porttitor. Quisque blandit ipsum at erat vulputate posuere. Morbi id urna ultrices, accumsan tortor vitae, facilisis leo.</p>
+        <h4 class="grey-text">NortSea About</h4>
+        <p class="grey-text">Lorem ipsum dolor sit amet, consectetur mollis ut odio. Praesent et posuere ex. Suspendisse bibendum orci nec imperdiet porttitor. Quisque blandit ipsum at erat vulputate posuere. Morbi id urna ultrices, accumsan tortor vitae, facilisis leo.</p>
         <button type="button" class="text-secondary btn btn-dark dropdown-toggle border-bottom" data-toggle="dropdown">
           Read More
         </button>
       </div>
 
-      <div class="col-md-3">
-        <h3 class="grey-text">NortSea Hotel</h3>
+      <div class="col-md-3 footer-links">
+        <h4 class="grey-text">NortSea Hotel</h4>
           <a href="#" class="grey-text text-center">About Us</a>
           <div class="w-100">
 
@@ -531,7 +533,7 @@
 
 
       <div class="col-md-3">
-        <h3 class="grey-text">Contact Us</h3>
+        <h4 class="grey-text">Contact Us</h4>
         <div class="row">
           <div class="col">
             <p class="gold-text"><i class="demo-icon icon-location"></i>Address:</p>
