finishing up "about us" page

--- a/aboutus.html
+++ b/aboutus.html
@@ -141,7 +141,7 @@
 
       <div class="bg-light">
         <div class="card-deck first-page-cards bg-light">
-          <div class="card border-0">
+          <div class="card border-0 bg-light">
             <div class="card-body">
               <img src="img/suitcase.png" alt="">
               <h4 class="card-title">Amazing Travel</h4>
@@ -156,7 +156,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0">
+          <div class="card border-0 bg-light">
             <div class="card-body">
               <img src="img/discover.png" alt="">
               <h4 class="card-title gold-text">Discover</h4>
@@ -171,7 +171,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0">
+          <div class="card border-0 bg-light">
             <div class="card-body">
               <img src="img/around-the-world.png" alt="">
               <h4 class="card-title">Book Your Trip</h4>
@@ -186,7 +186,7 @@
               </div>
             </div>
           </div>
-          <div class="card border-0">
+          <div class="card border-0 bg-light">
             <div class="card-body">
               <img src="img/speech-bubble.png" alt="">
               <h4 class="card-title">Nice Support</h4>
@@ -210,6 +210,143 @@
           </div>
         </div>
       </div>
+
+      <div class="bg-light second-page-cards">
+        <div class="card-deck john-doe">
+          <div class="card border-0 bg-light">
+            <div class="card-body">
+              <div class="icon-picture-1">
+
+              </div>
+              <h4 class="card-title">John Doe</h4>
+              <p class="founder">Founder</p>
+              <p class="card-text text-secondary">Lorem ipsum dolor elit. Aliquam odio nibh, gravida a augue quis Suspendisse elementum dolor euismod pharetra.</p>
+              <div class="col-md text-center social-networking">
+                <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+                <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+                <a class="text-muted social-link" href="" target="_blank"><i class="demo-icon icon-dribbble"></i></a>
+                <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 bg-light">
+            <div class="card-body">
+              <div class="icon-picture-1">
+
+              </div>
+              <h4 class="card-title">John Doe</h4>
+              <p class="founder">Founder</p>
+              <p class="card-text text-secondary">Nam tellus, conva augue.Aliquam odio nibh, gravida a augue quis Aliquam lobortis mollis dapibus ullamcorper justo.</p>
+              <div class="col-md text-center social-networking">
+                <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+                <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+                <a class="text-muted social-link" href="" target="_blank"><i class="demo-icon icon-dribbble"></i></a>
+                <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 bg-light">
+            <div class="card-body">
+              <div class="icon-picture-1">
+
+              </div>
+              <h4 class="card-title">John Doe</h4>
+              <p class="founder">Founder</p>
+              <p class="card-text text-secondary">Curabitur dui risus, pellentesque a mi.Aliquam odio nibh, gravida a augue quis Cras orci ultricies fermentum.</p>
+              <div class="col-md text-center social-networking">
+                <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+                <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+                <a class="text-muted social-link" href="" target="_blank"><i class="demo-icon icon-dribbble"></i></a>
+                <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="card border-0 bg-light">
+            <div class="card-body">
+              <div class="icon-picture-1">
+
+              </div>
+              <h4 class="card-title">John Doe</h4>
+              <p class="founder">Founder</p>
+              <p class="card-text text-secondary">Nulla erat urna, vulputate quis in, ac ante.Aliquam odio nibh, gravida a augue quis Vpit odio quis tincidunt.</p>
+              <div class="col-md text-center social-networking">
+                <a class="text-muted social-link" href="https://www.facebook.com/" target="_blank"><i class="demo-icon icon-facebook-squared"></i></a>
+                <a class="text-muted social-link" href="https://twitter.com/" target="_blank"><i class="demo-icon icon-twitter"></i></a>
+                <a class="text-muted social-link" href="" target="_blank"><i class="demo-icon icon-dribbble"></i></a>
+                <a class="text-muted social-link" href="https://www.gmail.com" target="_blank"><i class="demo-icon icon-mail-1"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="row bg-dark">
+        <div class="col-md-3">
+          <h4 class="grey-text">NortSea About</h4>
+          <p class="grey-text">Lorem ipsum dolor sit amet, consectetur mollis ut odio. Praesent et posuere ex. Suspendisse bibendum orci nec imperdiet porttitor. Quisque blandit ipsum at erat vulputate posuere. Morbi id urna ultrices, accumsan tortor vitae, facilisis leo.</p>
+          <button type="button" class="text-secondary btn btn-dark dropdown-toggle border-bottom" data-toggle="dropdown">
+            Read More
+          </button>
+        </div>
+
+        <div class="col-md-3 footer-links">
+          <h4 class="grey-text">NortSea Hotel</h4>
+            <a href="#" class="grey-text text-center">About Us</a>
+            <div class="w-100">
+
+            </div>
+            <a href="#" class="grey-text">Services</a>
+            <div class="w-100">
+
+            </div>
+            <a href="#" class="grey-text">Contact</a>
+        </div>
+
+
+        <div class="col-md-3">
+          <h4 class="grey-text">Contact Us</h4>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-location"></i>Address:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">1100 Pico Blvd
+              Santa Monica, CA 90405
+              United States</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-phone"></i>Phone:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">+440 1233213208</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-paper-plane"></i>Email:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">support@nortsea.com</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col">
+              <p class="gold-text"><i class="demo-icon icon-compass"></i>GPS:</p>
+            </div>
+            <div class="col">
+              <p class="grey-text">12.021211/118.469009</p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col-md-3 logo-footer">
+          <img src="img/logo-footer.png" alt="">
+        </div>
+
+      </footer>
 
 
     </div>
